fix the visibility bug

--- a/pages/contact/style.css
+++ b/pages/contact/style.css
@@ -45,12 +45,7 @@
     background-color: #EEEEF0;
     color: #495057;
 }
-.form-control {
-    height: 68px !important;
-    border-radius: 11px !important;
-    z-index: 0 !important;
-    border: 1px solid #A2A0A8;
-}
+
 .form-control:focus {
     box-shadow: none;
     border-color:#A2A0A8;
@@ -91,8 +86,9 @@
 .form-control{
     margin-top: 20px;
     width: 100% !important;
+    height: 68px !important;
     color: black;
-    border-radius: 11px !important;
+    border-radius: 5px !important;
     height: 50px;
     z-index: 0 !important;
     text-align: start;
